iptables.rules
# Generated by iptables-save v1.6.0 on Fri Oct 27 03:34:59 2017
*security
:INPUT ACCEPT [289:46555]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [250:48689]
COMMIT
# Completed on Fri Oct 27 03:34:59 2017
# Generated by iptables-save v1.6.0 on Fri Oct 27 03:34:59 2017
*raw
:PREROUTING ACCEPT [289:46555]
:OUTPUT ACCEPT [250:48689]
COMMIT
# Completed on Fri Oct 27 03:34:59 2017
# Generated by iptables-save v1.6.0 on Fri Oct 27 03:34:59 2017
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [4:240]
:POSTROUTING ACCEPT [4:240]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8443
COMMIT
# Completed on Fri Oct 27 03:34:59 2017
# Generated by iptables-save v1.6.0 on Fri Oct 27 03:34:59 2017
*mangle
:PREROUTING ACCEPT [289:46555]
:INPUT ACCEPT [289:46555]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [250:48689]
:POSTROUTING ACCEPT [250:48689]
COMMIT
# Completed on Fri Oct 27 03:34:59 2017
# Generated by iptables-save v1.6.0 on Fri Oct 27 03:34:59 2017
*filter
:INPUT ACCEPT [190:39883]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [190:39883]
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -j DROP
-A OUTPUT -p tcp -m tcp --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 443 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 8443 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -j ACCEPT
COMMIT
# Completed on Fri Oct 27 03:34:59 2017
